# Thesis

./: .gitignore  Front and back.tex  README.md  Working plan.md  literature.md  notes.md  requirements.txt
Code/: aggregate.py  candlestick_functions.py  eight_patterns.py  eleven_patterns.py  five_patterns.py  four_patterns.py  main.py  one_patterns.py  pattern_detection.py  patterns.py  requirements.txt  stats.py  summary.txt  summary_table.py  ten_patterns.py  test.ipynb  thirteen_patterns.py  three_patterns.py  twelve_patterns.py  two_patterns.py
Presentation/: beamerthemeKUL.sty  bib.bib  presentation.tex
Thesis/: 01-introduction.Rmd  02-baseline.Rmd  02-literature.Rmd  03-additional-filters.Rmd  03-methodology-preprocessing.Rmd  04-preliminary-results.Rmd  05-further-work.Rmd  06-references.Rmd  07-appendices.Rmd  Thesis.Rproj  _main.aux  _main.toc  _output.yml  _quarto.yml  backcover.tex  bib.bib  bibliography.qmd  conclusion.qmd  cover.tex  index.Rmd  index.qmd  indicators.py  literature.qmd  methodology.qmd  packages.bib  preamble.tex  results.qmd
Thesis/LaTeX/: backcover.tex  preamble.tex
candlestick_patterns/: .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml  summary_10_minutes_US.txt  summary_1_minutes.txt  summary_1_minutes_US.txt  summary_2_minutes.txt  summary_2_minutes_US.txt  summary_3_minutes.txt  summary_3_minutes_US.txt  summary_4_minutes.txt  summary_4_minutes_US.txt  summary_5_minutes.txt  summary_5_minutes_US.txt
candlestick_patterns/aggregation/: aggregate.py
candlestick_patterns/calibration/: calibration.py
candlestick_patterns/detection/: pattern_detection.py
candlestick_patterns/detection/patterns/: eight_patterns.py  eleven_patterns.py  five_patterns.py  four_patterns.py  one_patterns.py  ten_patterns.py  thirteen_patterns.py  three_patterns.py  twelve_patterns.py  two_patterns.py
candlestick_patterns/detection/patterns/functions/: candlestick_functions.py
candlestick_patterns/evaluation/: evaluation.py
candlestick_patterns/reading/: read_data.py
candlestick_patterns/scripts/: GBM.py  add_new_parameter_category.py  backtest.py  bests_and_means.py  contingency.py  plot_candlestick_pattern.py  plot_figure.py  plots.py  rerun_all.py  rerun_summaries.py  stock_evolution_chart.py
candlestick_patterns/src/: logo.txt  main.py
candlestick_patterns/src/GBM/: GBM.py
candlestick_patterns/src/calibration/: calibration.py
candlestick_patterns/src/contingency/: contingency.py
candlestick_patterns/src/detection/: pattern_detection.py
candlestick_patterns/src/detection/patterns/: eight_patterns.py  eleven_patterns.py  five_patterns.py  four_patterns.py  one_patterns.py  ten_patterns.py  thirteen_patterns.py  three_patterns.py  twelve_patterns.py  two_patterns.py
candlestick_patterns/src/detection/patterns/functions/: candlestick_functions.py
candlestick_patterns/src/evaluation/: cleanup.py  evaluation.py
candlestick_patterns/src/folder_setup/: add_new_parameter_category.py  folder_setup.py
candlestick_patterns/src/indicators/: backtest.py  filtering.py  indicators.py
candlestick_patterns/src/news/: news.py
candlestick_patterns/src/reading/: read_data.py
candlestick_patterns/src/shared/: constants.py  shared_functions.py
candlestick_patterns/src/summary/: summary_table.py
candlestick_patterns/src/trend/: trend_calculation.py
candlestick_patterns/src/wiener/: wiener.py
candlestick_patterns/summary/: summary_table.py
candlestick_patterns/test/: test_aggregation.py
candlestick_patterns/tests/: test_aggregation.py
candlestick_patterns/trend/: trend_calculation.py
candlestick_patterns/utility/: chrono.py  parquetlayer.py  visualize.py
(+59 files in other folders)
