[project]
name = "candlestick_patterns"
version = "1.0.0"
description = "Source code for my thesis 'Performance of Candlestick Patterns on intraday market data'."
readme = "README.md"
authors = [{ name = "wnotermans", email = "woutnotermans1@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "mplfinance>=0.12.10b0",
    "numba>=0.61.0",
    "pyarrow>=19.0.0",
    "scipy>=1.15.1",
    "seaborn>=0.13.2",
    "word2number>=1.1",
    "yfinance>=0.2.59",
]

[dependency-groups]
dev = ["pytest-cov>=6.0.0"]

[tool.pyright]
include = ["src", "scripts", "tests"]
exclude = ["**/.*", "**/__pycache__", "**/data"]
typeCheckingMode = "off"

[tool.pytest.ini_options]
testpaths = "tests"

[tool.uv]
package = true

[tool.commitizen]
name = "cz_gitmoji"

[tool.ruff.lint]
select = [
    "A",   # avoid shadowing builtins
    "ANN", # type annotations
    "B",   # possible bugs and design problems
    "C4",  # comprehensions
    "E",   # pycodestyle
    "F",   # pyflakes
    "FBT", # Boolean trap
    "PD",  # pandas
    "PL",  # pylint
    "I",   # isort
    "ISC", # implicit string concatenation
    "RET", # return statements
    "SIM", # simplify
    "UP",  # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004"]
